deploy/templates/enterprise/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gorgon
  labels:
    app.kubernetes.io/name: gorgon
    app.kubernetes.io/component: orchestrator
